helmchart/traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  replicas: 1
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --configfile=/config/traefik.yaml
            - --providers.redis=true
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: traefik-config
              mountPath: /config
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
            items:
              - key: traefik.yaml
                path: traefik.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: http
      port: 80
  type: LoadBalancer
