helmchart/ingress-whoami2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/version: "1.0"
  name: ingress-whoami
  namespace: traefik
spec:
  rules:
  - host: whoami.com
    http:
      paths:
      - backend:
          service:
            name: whoami
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
